format the code

--- a/build.gradle
+++ b/build.gradle
@@ -34,9 +34,13 @@ subprojects {
     afterEvaluate {
         dependencies {
             // Kotlin
-            implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+            implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
             // Add to avoid  w:Kotlin runtime JAR files in the classpath should have the same version
             implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
+
+            // (Asynchronous programming) coroutines
+            implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
+            implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
 
             // Retrofit2
             implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
@@ -45,10 +49,6 @@ subprojects {
             // Room DB
             implementation "androidx.room:room-runtime:$room_version"
             kapt "androidx.room:room-compiler:$room_version"
-
-            // coroutines
-            implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
-            implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
 
             // Paging
             implementation "androidx.paging:paging-runtime:$paging_version"
@@ -64,17 +64,20 @@ subprojects {
 
             // Declare the dependency for the Cloud Firestore library
             implementation 'com.google.firebase:firebase-firestore-ktx'
+            implementation "com.google.firebase:firebase-storage-ktx:$firebase_storage_version"
 
-            // Firebase for authentication
-            implementation 'com.google.firebase:firebase-auth'
+            // FirebaseUI for authentication
             implementation "com.firebaseui:firebase-ui-auth:$firebase_ui_auth_version"
+
+            // avoids "Service not registered" exception
+            implementation "com.google.android.gms:play-services-basement:$play_services_basement_version"
         }
     }
 }
 allprojects {
     repositories {
         google()
-//        jcenter is required for firebase-ui-auth and org.koin:koin-android
+//        jcenter is required for firebase-ui-auth
         jcenter()
         mavenCentral()
         maven { url "https://jitpack.io" }
@@ -94,15 +97,15 @@ ext {
     HOST_URL = getParam("HOST_URL")
     DATABASE_NAME = getParam("DATABASE_NAME")
 
-    SIGNING_KEY_DEBUG_PASSWORD = getParam("SIGNING_KEY_DEBUG_PASSWORD")
-    SIGNING_KEY_DEBUG_KEY_PASSWORD = getParam("SIGNING_KEY_DEBUG_KEY_PASSWORD")
     SIGNING_KEY_DEBUG_PATH = getParam("SIGNING_KEY_DEBUG_PATH")
+    SIGNING_KEY_DEBUG_PASSWORD = getParam("SIGNING_KEY_DEBUG_PASSWORD")
     SIGNING_KEY_DEBUG_KEY = getParam("SIGNING_KEY_DEBUG_KEY")
+    SIGNING_KEY_DEBUG_KEY_PASSWORD = getParam("SIGNING_KEY_DEBUG_KEY_PASSWORD")
 
-    SIGNING_KEY_RELEASE_PASSWORD = getParam("SIGNING_KEY_RELEASE_PASSWORD")
-    SIGNING_KEY_RELEASE_KEY_PASSWORD = getParam("SIGNING_KEY_RELEASE_KEY_PASSWORD")
     SIGNING_KEY_RELEASE_PATH = getParam("SIGNING_KEY_RELEASE_PATH")
+    SIGNING_KEY_RELEASE_PASSWORD = getParam("SIGNING_KEY_RELEASE_PASSWORD")
     SIGNING_KEY_RELEASE_KEY = getParam("SIGNING_KEY_RELEASE_KEY")
+    SIGNING_KEY_RELEASE_KEY_PASSWORD = getParam("SIGNING_KEY_RELEASE_KEY_PASSWORD")
 }
 
 task clean(type: Delete) {
