--- a/gradle.properties
+++ b/gradle.properties
@@ -30,7 +30,7 @@ kotlin_version=1.5.20
 retrofit_version=2.9.0
 paging_version=2.1.2
 appcompat_version=1.3.0
-material=1.4.0
+material_version=1.4.0
 fragment_version=1.3.5
 activity_version=1.2.3
 okhttp_version=4.9.0
@@ -41,10 +41,12 @@ gson_version=2.8.6
 jwt_version=3.11.0
 # app does not work with firebase-ui version 7.2.0
 firebase_ui_auth_version=7.1.1
+firebase_storage_version=20.0.0
 build_gradle_version=4.2.2
 google_services_version=4.3.8
 firebase_crashlytics_gradle_version=2.7.0
 firebase_bom_version=26.2.0
+play_services_basement_version=17.6.0
 # envirement variables
 env.HOST_URL=https://restcountries.eu/
 env.DATABASE_NAME=travelling.db
