--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -1,8 +1,10 @@
-apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-kapt'
-apply plugin: 'com.google.gms.google-services'
-apply plugin: 'com.google.firebase.crashlytics'
+plugins {
+    id 'com.android.application'
+    id 'kotlin-android'
+    id 'kotlin-kapt'
+    id 'com.google.gms.google-services'
+    id 'com.google.firebase.crashlytics'
+}
 
 android {
     compileSdkVersion rootProject.compile_sdk_version
@@ -22,13 +24,13 @@ android {
     }
 
     signingConfigs {
-        release {
+        production {
             storeFile file(rootProject.SIGNING_KEY_RELEASE_PATH)
             storePassword rootProject.SIGNING_KEY_RELEASE_PASSWORD
             keyAlias rootProject.SIGNING_KEY_RELEASE_KEY
             keyPassword rootProject.SIGNING_KEY_RELEASE_KEY_PASSWORD
         }
-        debug {
+        dev {
             storeFile file(rootProject.SIGNING_KEY_DEBUG_PATH)
             storePassword rootProject.SIGNING_KEY_DEBUG_PASSWORD
             keyAlias rootProject.SIGNING_KEY_DEBUG_KEY
@@ -36,18 +38,18 @@ android {
         }
     }
     buildTypes {
-        debug {
-            signingConfig signingConfigs.debug
-// used in manifest provider authorities
-            resValue "string", "content_provider",
-                    "com.facebook.app.FacebookContentProvider285452062466394"
-        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'),
                     'proguard-rules.pro'
-            signingConfig signingConfigs.release
+            signingConfig signingConfigs.production
             // used in manifest provider authorities
+            resValue "string", "content_provider",
+                    "com.facebook.app.FacebookContentProvider285452062466394"
+        }
+        debug {
+            signingConfig signingConfigs.dev
+// used in manifest provider authorities
             resValue "string", "content_provider",
                     "com.facebook.app.FacebookContentProvider285452062466394"
         }
@@ -76,7 +78,7 @@ dependencies {
     api "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
 
     // design components
-    implementation "com.google.android.material:material:$material"
+    implementation "com.google.android.material:material:$material_version"
 
     implementation "androidx.fragment:fragment-ktx:$fragment_version"
     implementation "androidx.activity:activity-ktx:$activity_version"
@@ -135,19 +137,21 @@ dependencies {
     implementation "com.facebook.android:facebook-share:$facebookVersion"
     implementation "com.facebook.android:facebook-applinks:$facebookVersion"
     implementation "com.facebook.android:facebook-login:$facebookVersion"
+    implementation 'com.facebook.android:facebook-android-sdk:5.1.1'
 
+    // used for animation
     def lottieVersion = "3.4.4"
     implementation "com.airbnb.android:lottie:$lottieVersion"
 
-    // for ci to publish on google play market
+    // for "ci", used for deploying app to google app market
     def appCenterSdkVersion = '4.1.0'
     implementation "com.microsoft.appcenter:appcenter-distribute:${appCenterSdkVersion}"
 
     // Koin for Android
-    implementation ("io.insert-koin:koin-android:$insert_koin_version")
+    implementation("io.insert-koin:koin-android:$insert_koin_version")
 
     // Koin core features
-    implementation ("io.insert-koin:koin-core:$insert_koin_version")
+    implementation("io.insert-koin:koin-core:$insert_koin_version")
 
     // test
     testImplementation "junit:junit:$junit_version"
