update network dependencies

--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -30,5 +30,5 @@ java {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     // Koin core features
-    implementation "io.insert-koin:koin-core:$insert_koin_version"
+    api "io.insert-koin:koin-core:$insert_koin_version"
 }
