--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -86,13 +86,10 @@ dependencies {
     // android
     implementation "androidx.appcompat:appcompat:$appcompat_version"
     implementation 'androidx.core:core-ktx:1.6.0'
-    implementation 'com.android.billingclient:billing:4.0.0'
 
     // firebase
-    implementation 'com.google.firebase:firebase-crashlytics:18.1.0'
-    implementation 'com.google.firebase:firebase-analytics:19.0.0'
-    implementation 'com.google.firebase:firebase-database-ktx:20.0.0'
-    implementation "com.firebaseui:firebase-ui-auth:$firebase_ui_auth_version"
+    implementation 'com.google.firebase:firebase-crashlytics'
+    implementation 'com.google.firebase:firebase-analytics'
 
     // ViewModel and LiveData
     def lifecycle_version = "2.3.1"
@@ -131,11 +128,10 @@ dependencies {
     implementation "com.google.android.gms:play-services-location:18.0.0"
 
     // Facebook SDK
-    def facebookVersion = "8.1.0"
+    def facebookVersion = "11.1.0"
     implementation "com.facebook.android:facebook-share:$facebookVersion"
     implementation "com.facebook.android:facebook-applinks:$facebookVersion"
-    implementation "com.facebook.android:facebook-login:$facebookVersion"
-    implementation 'com.facebook.android:facebook-android-sdk:5.1.1'
+    implementation "com.facebook.android:facebook-android-sdk:$facebookVersion"
 
     // used for animation
     def lottieVersion = "3.4.4"
