add firebase cloud messaging

--- a/gradle.properties
+++ b/gradle.properties
@@ -42,6 +42,7 @@ build_gradle_version=4.2.2
 google_services_version=4.3.8
 firebase_crashlytics_gradle_version=2.7.0
 firebase_bom_version=26.2.0
+firebase_perf_version=1.4.0
 play_services_basement_version=17.6.0
 # envirement variables
 env.HOST_URL=https://restcountries.eu/
