--- a/build.gradle
+++ b/build.gradle
@@ -7,8 +7,8 @@ buildscript {
         build_tools_version = "30.0.3"
         min_sdk_version = 21
         target_sdk_version = 30
-        version_code = 7
-        version_name = "1.0.5"
+        version_code = 8
+        version_name = "1.0.6"
     }
     repositories {
         google()
@@ -24,6 +24,8 @@ buildscript {
         classpath "com.google.gms:google-services:$google_services_version"
         // Crashlytics Gradle plugin
         classpath "com.google.firebase:firebase-crashlytics-gradle:$firebase_crashlytics_gradle_version"
+       // the dependency for the Performance Monitoring plugin
+        classpath "com.google.firebase:perf-plugin:$firebase_perf_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
