--- a/gradle.properties
+++ b/gradle.properties
@@ -23,7 +23,7 @@ kapt.incremental.apt=true
 # global dependency versions
 multidexVersion=2.0.1
 insert_koin_version=3.1.2
-coroutines_version=1.4.0
+coroutines_version=1.5.2-native-mt
 room_version=2.3.0
 kotlin_version=1.5.30
 retrofit_version=2.9.0
@@ -37,7 +37,7 @@ junit_version=4.13.2
 ext_junit_version=1.1.3
 espresso_version=3.4.0
 gson_version=2.8.8
-jwt_version=3.18.1
+jwt_version=3.18.2
 google_services_version=4.3.8
 firebase_crashlytics_gradle_version=2.7.0
 firebase_bom_version=28.3.1
