--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ buildscript {
         maven { url "https://jitpack.io" }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.0.2'
+        classpath 'com.android.tools.build:gradle:7.0.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
 
@@ -91,6 +91,7 @@ ext {
     }
 
     HOST_URL = getParam("HOST_URL")
+    COUNTRIES_API_KEY = getParam("COUNTRIES_API_KEY")
     DATABASE_NAME = getParam("DATABASE_NAME")
 
     SIGNING_KEY_DEBUG_PATH = getParam("SIGNING_KEY_DEBUG_PATH")
