--- a/gradle.properties
+++ b/gradle.properties
@@ -25,7 +25,7 @@ multidexVersion=2.0.1
 insert_koin_version=3.1.2
 coroutines_version=1.5.2-native-mt
 room_version=2.3.0
-kotlin_version=1.5.30
+kotlin_version=1.5.31
 retrofit_version=2.9.0
 paging_version=2.1.2
 appcompat_version=1.3.1
@@ -44,7 +44,7 @@ firebase_bom_version=28.3.1
 firebase_perf_version=1.4.0
 play_services_basement_version=17.6.0
 # envirement variables
-env.HOST_URL=https://restcountries.eu/
+env.HOST_URL=https://restcountries.com/v2/
 env.DATABASE_NAME=travelling.db
 env.SIGNING_KEY_DEBUG_PATH=../keystore/travelling.jks
 env.SIGNING_KEY_DEBUG_PASSWORD=travelling
