fix grammar in comments

--- a/presentation/src/main/AndroidManifest.xml
+++ b/presentation/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <!-- remove add dependency -->
+        <!-- remove advertising dependency -->
         <meta-data
             android:name="google_analytics_adid_collection_enabled"
             android:value="false" />
