--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -96,7 +96,7 @@ dependencies {
     // firebase
     implementation 'com.google.firebase:firebase-crashlytics:18.2.4'
     implementation('com.google.firebase:firebase-analytics:20.0.0') {
-        // remove add dependency
+        // remove advertising dependency
         exclude module: "play-services-ads-identifier"
         exclude module: "play-services-measurement"
         exclude module: "play-services-measurement-sdk"
