--- a/data/build.gradle
+++ b/data/build.gradle
@@ -1,3 +1,4 @@
+//file:noinspection GrUnresolvedAccess
 plugins {
     id 'com.android.library'
     id 'kotlin-android'
@@ -18,6 +19,7 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles 'consumer-rules.pro'
     }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -25,10 +27,12 @@ android {
                     'proguard-rules.pro'
         }
     }
+
     compileOptions {
         sourceCompatibility = 11
         targetCompatibility = 11
     }
+
     kotlinOptions {
         jvmTarget = '11'
     }
