--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,6 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+//file:noinspection GroovyAssignabilityCheck
+//file:noinspection GrUnresolvedAccess
 buildscript {
     repositories {
         google()
