--- a/gradle.properties
+++ b/gradle.properties
@@ -20,32 +20,36 @@ android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
 kapt.incremental.apt=true
-
 # global dependency versions
 multidexVersion=2.0.1
-# app does not work with koin version 2.2.2 does not work
-koin_version=2.1.6
-coroutines_version=1.4.0
-# app does not work with room version 2.3.0
-room_version=2.2.6
-kotlin_version=1.5.10
+insert_koin_version=3.1.4
+coroutines_version=1.5.2-native-mt
+room_version=2.3.0
+kotlin_version=1.6.0
 retrofit_version=2.9.0
 paging_version=2.1.2
-appcompat_version=1.3.0
-material=1.3.0
-fragment_version=1.3.4
-activity_version=1.2.3
-okhttp_version=4.9.0
-
+appcompat_version=1.4.0
+material_version=1.4.0
+fragment_version=1.4.0
+activity_version=1.4.0
+okhttp_version=4.9.3
+junit_version=4.13.2
+ext_junit_version=1.1.3
+espresso_version=3.4.0
+gson_version=2.8.9
+jwt_version=3.18.2
+google_services_version=4.3.8
+firebase_crashlytics_gradle_version=2.7.0
+firebase_bom_version=28.3.1
+firebase_perf_version=1.4.0
+play_services_basement_version=17.6.0
 # envirement variables
-env.HOST_URL=https://restcountries.eu/
+env.HOST_URL=https://restcountries.com/v2/
 env.DATABASE_NAME=travelling.db
-
 env.SIGNING_KEY_DEBUG_PATH=../keystore/travelling.jks
 env.SIGNING_KEY_DEBUG_PASSWORD=travelling
 env.SIGNING_KEY_DEBUG_KEY=key1
 env.SIGNING_KEY_DEBUG_KEY_PASSWORD=travelling
-
 env.SIGNING_KEY_RELEASE_PATH=../keystore/travelling.jks
 env.SIGNING_KEY_RELEASE_PASSWORD=travelling
 env.SIGNING_KEY_RELEASE_KEY=key1
