--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,6 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+//file:noinspection GroovyAssignabilityCheck
+//file:noinspection GrUnresolvedAccess
 buildscript {
     // Defining versions in a single place
     ext {
@@ -7,16 +9,19 @@ buildscript {
         build_tools_version = "30.0.3"
         min_sdk_version = 21
         target_sdk_version = 30
-        version_code = 14
-        version_name = "2.0.3"
+/* to check the latest version @see
+[https://play.google.com/console/u/0/developers/6867856033872987263/app/4975238491076611804/releases/overview] */
+        version_code = 15
+        version_name = "2.0.4"
     }
     repositories {
+        // Google's Maven repository
         google()
         mavenCentral()
         maven { url "https://jitpack.io" }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.0.3'
+        classpath 'com.android.tools.build:gradle:7.1.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
 
