--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -1,3 +1,4 @@
+//file:noinspection GrUnresolvedAccess
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
@@ -11,6 +12,7 @@ android {
     compileSdkVersion rootProject.compile_sdk_version
     buildToolsVersion rootProject.build_tools_version
 
+    //noinspection GroovyAssignabilityCheck
     defaultConfig {
         applicationId "ua.turskyi.travelling"
         minSdkVersion rootProject.min_sdk_version
@@ -21,7 +23,7 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
         // to ensure that the translations of Firebase library are relevant to the application
-        resConfigs "en"
+        resConfigs 'en'
     }
 
     signingConfigs {
@@ -39,9 +41,12 @@ android {
         }
     }
 
+    //noinspection GroovyAssignabilityCheck
     buildTypes {
+        //noinspection GroovyAssignabilityCheck
         release {
             minifyEnabled false
+            //noinspection GroovyAssignabilityCheck
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'),
                     'proguard-rules.pro'
             signingConfig signingConfigs.production
@@ -57,8 +62,10 @@ android {
         }
     }
 
+    //noinspection GroovyAssignabilityCheck
     buildFeatures {
         dataBinding true
+        //noinspection GroovyAssignabilityCheck
         viewBinding true
     }
 
@@ -94,25 +101,27 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.7.0'
 
     // firebase
-    implementation 'com.google.firebase:firebase-crashlytics:18.2.5'
-    implementation('com.google.firebase:firebase-analytics:20.0.0') {
+    implementation 'com.google.firebase:firebase-crashlytics:18.2.9'
+    implementation('com.google.firebase:firebase-analytics:20.1.2') {
         // remove advertising dependency
         exclude module: "play-services-ads-identifier"
         exclude module: "play-services-measurement"
         exclude module: "play-services-measurement-sdk"
     }
-    implementation 'com.google.firebase:firebase-perf:20.0.4'
-    implementation 'com.google.firebase:firebase-messaging:23.0.0'
+    /* Declare the dependency for the Performance Monitoring library.
+       When using the BoM, we don't specify versions in Firebase library dependencies. */
+    implementation 'com.google.firebase:firebase-perf-ktx:20.0.6'
+    implementation 'com.google.firebase:firebase-messaging:23.0.3'
 
     // ViewModel and LiveData
-    def lifecycle_version = "2.4.0"
+    def lifecycle_version = "2.4.1"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
 
     // Glide (Image caching and management)
-    def glideVersion = "4.12.0"
+    def glideVersion = "4.13.0"
     kapt "com.github.bumptech.glide:compiler:$glideVersion"
     implementation "com.github.bumptech.glide:glide:$glideVersion"
 
@@ -138,10 +147,10 @@ dependencies {
     implementation 'com.github.chrisbanes:PhotoView:2.3.0'
 
     // Location
-    implementation "com.google.android.gms:play-services-location:18.0.0"
+    implementation "com.google.android.gms:play-services-location:19.0.1"
 
     // Facebook SDK
-    def facebookVersion = "12.1.0"
+    def facebookVersion = "12.3.0"
     implementation "com.facebook.android:facebook-share:$facebookVersion"
     implementation "com.facebook.android:facebook-applinks:$facebookVersion"
     implementation "com.facebook.android:facebook-android-sdk:$facebookVersion"
@@ -149,10 +158,6 @@ dependencies {
     // used for animation
     def lottieVersion = "4.2.2"
     implementation "com.airbnb.android:lottie:$lottieVersion"
-
-    // for "ci", used for deploying app to google app market
-    def appCenterSdkVersion = '4.3.1'
-    implementation "com.microsoft.appcenter:appcenter-distribute:${appCenterSdkVersion}"
 
     // Koin for Android
     implementation("io.insert-koin:koin-android:$insert_koin_version")
