--- a/gradle.properties
+++ b/gradle.properties
@@ -22,22 +22,22 @@ kotlin.code.style=official
 kapt.incremental.apt=true
 # global dependency versions
 multidexVersion=2.0.1
-insert_koin_version=3.1.5
-coroutines_version=1.6.0-native-mt
-room_version=2.4.1
-kotlin_version=1.6.20
+insert_koin_version=3.2.0
+coroutines_version=1.6.4
+room_version=2.4.2
+kotlin_version=1.7.10
 retrofit_version=2.9.0
 paging_version=2.1.2
-appcompat_version=1.4.1
-material_version=1.5.0
-fragment_version=1.4.1
-activity_version=1.4.0
+appcompat_version=1.4.2
+material_version=1.6.1
+fragment_version=1.5.0
+activity_version=1.5.0
 okhttp_version=4.9.3
 junit_version=4.13.2
 ext_junit_version=1.1.3
 espresso_version=3.4.0
 gson_version=2.9.0
-jwt_version=3.18.3
+jwt_version=4.0.0
 google_services_version=4.3.10
 firebase_crashlytics_gradle_version=2.7.0
 firebase_bom_version=29.0.4
