--- a/data/build.gradle
+++ b/data/build.gradle
@@ -36,6 +36,7 @@ android {
     packagingOptions {
         resources.excludes.add("META-INF/*")
     }
+    namespace 'ua.turskyi.data'
 }
 
 dependencies {
