--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -77,6 +77,7 @@ android {
     }
 
     testOptions.unitTests.includeAndroidResources = true
+    namespace 'ua.turskyi.travelling'
 }
 
 dependencies {
@@ -96,11 +97,11 @@ dependencies {
 
     // android
     implementation "androidx.appcompat:appcompat:$appcompat_version"
-    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.core:core-ktx:1.8.0'
 
     // firebase
-    implementation 'com.google.firebase:firebase-crashlytics:18.2.9'
-    implementation('com.google.firebase:firebase-analytics:20.1.2') {
+    implementation 'com.google.firebase:firebase-crashlytics:18.2.11'
+    implementation('com.google.firebase:firebase-analytics:21.0.0') {
         // remove advertising dependency
         exclude module: "play-services-ads-identifier"
         exclude module: "play-services-measurement"
@@ -108,18 +109,18 @@ dependencies {
     }
     /* Declare the dependency for the Performance Monitoring library.
        When using the BoM, we don't specify versions in Firebase library dependencies. */
-    implementation 'com.google.firebase:firebase-perf-ktx:20.0.6'
-    implementation 'com.google.firebase:firebase-messaging:23.0.3'
+    implementation 'com.google.firebase:firebase-perf-ktx:20.1.0'
+    implementation 'com.google.firebase:firebase-messaging:23.0.6'
 
     // ViewModel and LiveData
-    def lifecycle_version = "2.4.1"
+    def lifecycle_version = "2.5.0"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
 
     // Glide (Image caching and management)
-    def glideVersion = "4.13.0"
+    def glideVersion = "4.13.2"
     kapt "com.github.bumptech.glide:compiler:$glideVersion"
     implementation "com.github.bumptech.glide:glide:$glideVersion"
 
@@ -127,7 +128,7 @@ dependencies {
     implementation 'com.github.corouteam:GlideToVectorYou:2.0.0'
 
     // BaseRecyclerViewAdapterHelper
-    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.6'
+    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.7'
 
     // Recyclerview
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
@@ -145,16 +146,16 @@ dependencies {
     implementation 'com.github.chrisbanes:PhotoView:2.3.0'
 
     // Location
-    implementation "com.google.android.gms:play-services-location:19.0.1"
+    implementation "com.google.android.gms:play-services-location:20.0.0"
 
     // Facebook SDK
-    def facebookVersion = "12.3.0"
+    def facebookVersion = "14.1.0"
     implementation "com.facebook.android:facebook-share:$facebookVersion"
     implementation "com.facebook.android:facebook-applinks:$facebookVersion"
     implementation "com.facebook.android:facebook-android-sdk:$facebookVersion"
 
     // used for animation
-    def lottieVersion = "4.2.2"
+    def lottieVersion = "5.2.0"
     implementation "com.airbnb.android:lottie:$lottieVersion"
 
     // Koin for Android
