--- a/gradle.properties
+++ b/gradle.properties
@@ -21,23 +21,24 @@ android.enableJetifier=true
 kotlin.code.style=official
 kapt.incremental.apt=true
 # global dependency versions
+appcompat_version=1.5.1
+activity_version=1.6.1
 multidexVersion=2.0.1
-insert_koin_version=3.2.0
+koin_android_version=3.3.0
+koin_core_version=3.2.2
 coroutines_version=1.6.4
 room_version=2.4.3
-kotlin_version=1.7.10
+kotlin_version=1.7.21
 retrofit_version=2.9.0
 paging_version=2.1.2
-appcompat_version=1.5.0
-material_version=1.6.1
-fragment_version=1.5.2
-activity_version=1.5.1
+material_version=1.7.0
+fragment_version=1.5.4
 okhttp_version=4.9.3
 junit_version=4.13.2
-ext_junit_version=1.1.3
-espresso_version=3.4.0
-gson_version=2.9.1
-jwt_version=4.0.0
+ext_junit_version=1.1.4
+espresso_version=3.5.0
+gson_version=2.10
+jwt_version=4.2.1
 google_services_version=4.3.10
 firebase_crashlytics_gradle_version=2.7.0
 firebase_bom_version=29.0.4
