--- a/.github/workflows/android_ci.yml
+++ b/.github/workflows/android_ci.yml
@@ -27,6 +27,6 @@ jobs:
           appId: ${{secrets.FIREBASE_ANDROID_APPID}}
           token: ${{secrets.FIREBASE_TOKEN}}
           groups: testers
-        releaseNotes: "App Build"
-        file: presentation/build/outputs/apk/release/presentation-release.apk
+          releaseNotes: "Travelling Android App Build"
+          file: presentation/build/outputs/apk/release/presentation-release.apk
 
